--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,7 +28,6 @@ body {
     background-color: #F9D423;
     text-decoration: underline;
     color: #fff;
-
   }
 
 #capitals
@@ -38,7 +37,7 @@ body {
     border: 5px solid black;
     box-sizing: border-box;
     margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 35px;
     padding: 10px;
     text-align: center;
     font-size: 50px;
@@ -50,7 +49,44 @@ body {
     text-decoration: underline;
     color: #fff;
   }
-
+  .input1{
+    width: auto;
+    height: auto;
+    border: 5px solid black;
+    box-sizing: border-box;
+    margin: 0 auto;
+    margin-top: 35px;
+    padding: 10px;
+    text-align: center;
+    font-size: 50px;
+    font-family: "Oswald";
+    font-weight: 300;
+    border-style: hidden;
+    border-radius: 10px;
+    background-color: #fff;
+    text-decoration: underline;
+    color: black;
+    float: inherit;
+  }
+  .output1{
+    width: auto;
+    height: auto;
+    border: 5px solid black;
+    box-sizing: border-box;
+    margin: 0 auto;
+    margin-top: 35px;
+    padding: 10px;
+    text-align: center;
+    font-size: 50px;
+    font-family: "Oswald";
+    font-weight: 300;
+    border-style: hidden;
+    border-radius: 10px;
+    background-color: #fff;
+    text-decoration: underline;
+    color: black;
+    float: inherit;
+  }
 #lowercase
   .box-middle{
     width: 900px;
@@ -58,7 +94,7 @@ body {
     border: 5px solid black;
     box-sizing: border-box;
     margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 35px;
     padding: 10px;
     text-align: center;
     font-size: 50px;
@@ -70,7 +106,44 @@ body {
     text-decoration: underline;
     color: #fff;
   }
-
+  .input2{
+    width: auto;
+    height: auto;
+    border: 5px solid black;
+    box-sizing: border-box;
+    margin: 0 auto;
+    margin-top: 35px;
+    padding: 10px;
+    text-align: center;
+    font-size: 50px;
+    font-family: "Exo";
+    font-weight: 400;
+    border-style: hidden;
+    border-radius: 10px;
+    background-color: #fff;
+    text-decoration: underline;
+    color: black;
+    float: inherit;
+  }
+  .output2{
+    width: auto;
+    height: auto;
+    border: 5px solid black;
+    box-sizing: border-box;
+    margin: 0 auto;
+    margin-top: 35px;
+    padding: 10px;
+    text-align: center;
+    font-size: 50px;
+    font-family: "Exo";
+    font-weight: 400;
+    border-style: hidden;
+    border-radius: 10px;
+    background-color: #fff;
+    text-decoration: underline;
+    color: black;
+    float: inherit;
+  }
 #cursive
   .box-right{
     width: 900px;
@@ -78,7 +151,7 @@ body {
     border: 5px solid black;
     box-sizing: border-box;
     margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 35px;
     padding: 10px;
     text-align: center;
     font-size: 50px;
@@ -89,4 +162,42 @@ body {
     background-color: #379F7A;
     text-decoration: underline;
     color: #fff;
+  }
+  .input3{
+    width: auto;
+    height: auto;
+    border: 5px solid black;
+    box-sizing: border-box;
+    margin: 0 auto;
+    margin-top: 35px;
+    padding: 10px;
+    text-align: center;
+    font-size: 50px;
+    font-family: "Lobster";
+    font-weight: 300;
+    border-style: hidden;
+    border-radius: 10px;
+    background-color: #fff;
+    text-decoration: underline;
+    color: black;
+    float: inherit;
+  }
+  .output3{
+    width: auto;
+    height: auto;
+    border: 5px solid black;
+    box-sizing: border-box;
+    margin: 0 auto;
+    margin-top: 35px;
+    padding: 10px;
+    text-align: center;
+    font-size: 50px;
+    font-family: "Lobster";
+    font-weight: 300;
+    border-style: hidden;
+    border-radius: 10px;
+    background-color: #fff;
+    text-decoration: underline;
+    color: black;
+    float: inherit;
   }
