--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,15 +12,15 @@ body {
 
 #title
   .box-top{
-    width: 900px;
+    width: 800px;
     height: auto;
-    border: 5px;
+    border: 10px;
     box-sizing: border-box;
     margin: 0 auto;
     margin-top: 50px;
     padding: 10px;
     text-align: center;
-    font-size: 58px;
+    font-size: 40px;;
     font-family: "Courgette";
     font-weight: 400;
     border-style: hidden;
@@ -32,7 +32,7 @@ body {
 
 #capitals
   .box-left{
-    width: 900px;
+    width: 800px;
     height: auto;
     border: 5px solid black;
     box-sizing: border-box;
@@ -40,7 +40,7 @@ body {
     margin-top: 35px;
     padding: 10px;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     font-family: "Oswald";
     font-weight: 300;
     border-style: hidden;
@@ -58,7 +58,7 @@ body {
     margin-top: 35px;
     padding: 10px;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     font-family: "Oswald";
     font-weight: 300;
     border-style: hidden;
@@ -77,7 +77,7 @@ body {
     margin-top: 35px;
     padding: 10px;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     font-family: "Oswald";
     font-weight: 300;
     border-style: hidden;
@@ -89,7 +89,7 @@ body {
   }
 #lowercase
   .box-middle{
-    width: 900px;
+    width: 800px;
     height: auto;
     border: 5px solid black;
     box-sizing: border-box;
@@ -97,7 +97,7 @@ body {
     margin-top: 35px;
     padding: 10px;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     font-family: "Exo";
     font-weight: 400;
     border-style: hidden;
@@ -115,7 +115,7 @@ body {
     margin-top: 35px;
     padding: 10px;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     font-family: "Exo";
     font-weight: 400;
     border-style: hidden;
@@ -134,7 +134,7 @@ body {
     margin-top: 35px;
     padding: 10px;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     font-family: "Exo";
     font-weight: 400;
     border-style: hidden;
@@ -146,7 +146,7 @@ body {
   }
 #cursive
   .box-right{
-    width: 900px;
+    width: 800px;
     height: auto;
     border: 5px solid black;
     box-sizing: border-box;
@@ -154,7 +154,7 @@ body {
     margin-top: 35px;
     padding: 10px;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     font-family: "Lobster";
     font-weight: 400;
     border-style: hidden;
@@ -172,7 +172,7 @@ body {
     margin-top: 35px;
     padding: 10px;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     font-family: "Lobster";
     font-weight: 300;
     border-style: hidden;
@@ -191,7 +191,7 @@ body {
     margin-top: 35px;
     padding: 10px;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     font-family: "Lobster";
     font-weight: 300;
     border-style: hidden;
